# ChangeLog for sys-libs/freeipmi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.47 2012/04/24 19:03:16 flameeyes Exp $

*freeipmi-1.1.4 (24 Apr 2012)

  24 Apr 2012; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.1.4.ebuild,
  -freeipmi-1.0.10.ebuild, -freeipmi-1.0.9.ebuild:
  Version bump; cleanup old.

*freeipmi-1.1.1 (21 Jan 2012)

  21 Jan 2012; Robin H. Johnson <robbat2@gentoo.org>
  +files/freeipmi-1.1.1-strictaliasing.patch, +freeipmi-1.1.1.ebuild:
  Version bump.

*freeipmi-1.0.10 (14 Dec 2011)

  14 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.0.10.ebuild,
  -files/bmc-watchdog.initd, -files/ipmidetectd.initd, -freeipmi-0.8.9.ebuild:
  Version bump and remove old.

  09 Dec 2011; Markos Chandras <hwoarang@gentoo.org> freeipmi-1.0.8.ebuild:
  Stable on amd64 wrt bug #364485

*freeipmi-1.0.9 (22 Nov 2011)

  22 Nov 2011; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.0.9.ebuild,
  -files/bmc-watchdog.initd.2, -files/ipmidetectd.initd.2,
  -freeipmi-1.0.7-r1.ebuild, -freeipmi-1.0.7.ebuild:
  Version bump.

  10 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> freeipmi-0.8.9.ebuild:
  Drop stable x86 keywords wrt bug #364485.

*freeipmi-1.0.8 (28 Oct 2011)

  28 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.0.8.ebuild:
  Version bump.

*freeipmi-1.0.7-r1 (18 Oct 2011)

  18 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +freeipmi-1.0.7-r1.ebuild, +files/bmc-watchdog.initd.3,
  +files/ipmidetectd.initd.3:
  Revbump with more OpenRC-style init scripts.

*freeipmi-1.0.7 (28 Sep 2011)

  28 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -freeipmi-1.0.6-r2.ebuild, -files/freeipmi-1.0.6-bmc-watchdog-pidfile.patch,
  +freeipmi-1.0.7.ebuild:
  Version bump, the bmc-watchdog patch is properly upstreamed.

*freeipmi-1.0.6-r2 (26 Sep 2011)
