@@ -9,19 +9,21 @@ AUX ipmidetectd.initd.3 361 RMD160 2c6bad2f33316908198d8da94eaa5264cb2b00b6 SHA1
 DIST freeipmi-1.0.8.tar.gz 3191387 RMD160 5c224466b2ede8fd95468fa66e98e5dfcfe554e1 SHA1 33646700344a79d0a9e78fedbc6bffd61d357846 SHA256 f719e7ba64f8a716412631d811d1634c06feaf9f3abf938d5e2995ba66d42ada
 DIST freeipmi-1.1.1.tar.gz 3034950 RMD160 85f722b8e561554ca1cb347b6722f027158200d5 SHA1 24a626f381c51e91c64f190e33da2efa02115303 SHA256 eefae37a75d9d81eb4808f9f611a58aada5116a59d06047b2329d7c6c3e3060f
 DIST freeipmi-1.1.4.tar.gz 3068549 RMD160 2835099bed83cbf9257b898875fa5f5e599253bb SHA1 5ee7639e9e6148fda649dc68eee5fbd1c11d9967 SHA256 0cbd2581d52ddb9b791ec6691215176ed010ae79b909a93026fef6b1fb0a4178
+DIST freeipmi-1.1.5.tar.gz 3069748 RMD160 e7dad51bd78e3e5dba4b920669f9232546b2b642 SHA1 cf13113dd90c0d43dc314aaa50906b095fd99fe5 SHA256 f26bafe90e6d39a032c73aaad66bde1f2f2542e1e0f2cfe2c1ef81f22b99cad9
 EBUILD freeipmi-1.0.8.ebuild 1999 RMD160 5933e0d8cf127855453f09a927f55e0eec5fabca SHA1 7cef4c41670b149a8011e70338f1feb60b666da8 SHA256 f6f891e57c6f4dd8d68a12d44a5af60d9adab7ca50452f570950a5ff8b03d460
 EBUILD freeipmi-1.1.1.ebuild 1999 RMD160 0687275b1fbd36da5a2e6e5a6a8279c27dfd18c0 SHA1 b569bbce2f7a18668bcff1f72666b42e0f66b016 SHA256 508b8909909baaa4a9281adf26c31d1e793923e8c39e0c465a5378143519df53
 EBUILD freeipmi-1.1.4.ebuild 2001 RMD160 6c0eea7c29f1c9e6b0cbb5e126b7963493b33c12 SHA1 56f00799f9dcdc61814d07485fc362ab7bc73fc0 SHA256 c07d172482bd2e397735adaa2514d75573a66fdb337a41f6daf2fb4d37adc588
-MISC ChangeLog 8696 RMD160 44c9e748403d15817a640b9bab7e26d9be1dcb00 SHA1 48b4c5fd32bed0d9a3c88108a5694965bbcf7b13 SHA256 4468cbccb5a2164a0f2067b14a33ce9f953895245a8a148ef0ccb0faebe2829b
+EBUILD freeipmi-1.1.5.ebuild 2001 RMD160 0688819c2773a3894468405f8e2c20b8fea21583 SHA1 c315c23d365dd8e2605d05a6a55a12ee7fc57365 SHA256 d7644e402c79b11cf826adac5fcbf768dc951b821440f44836283f7ae6924345
+MISC ChangeLog 8824 RMD160 7e12efd2dffcf77dc60cbcd750db164305934ed2 SHA1 7985670b5d6091619a363f76fc06987523848e50 SHA256 0c9c2495c884b87ccb549946279778812f7b3c133c7debc2b57899db4193ce46
 MISC metadata.xml 234 RMD160 6498603a1fe3a96823743847afc906df194bb430 SHA1 5ec768281f5435ff5173031bd715fa65ddd274e3 SHA256 73ec73ca73cd98df81c2bbb3e76a83751a3c95802ac103ef21368201d871a9d3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPlvj7AAoJEBqCrVe7WSRDeKwH/jgRKmpmxN6h3T5vSTh2hxr+
-RdZVmSQ5bRHbxpR68javA7viIOCzUse/XKz0W885fWO0EibvrnIZU+ZUM4lYR7F0
-Z9edlBoUzJkrcEsNZS9bf8lTAb8uqeKNm4wguajTKLlmuPmigzsTehEO9f53WO1h
-1eGbZzvX2WBP6zCsDJJvvlW12fenPAcbrgBc5Y6SVTTfDdv/wPDC8qX5iZAPXMrT
-8hs3dmRR1svcxBrjAJVoV0AzC6yPFkWTeYgevzJvbvRS3sNHQCocwr4yuxjABhHp
-vGjkJyeLLNhV6lAW0aiUd/8uvPP4z5vPZuzGncpsYqTTrFGeDGoJgQXDBNjWfqQ=
-=UNRF
+iQEcBAEBAgAGBQJPtY9KAAoJEBzRPIrUMBNCLmgH/0gjQf38zvuZUWYB7UhdhaNE
+weUDgPEU4ECiP0bYUVjsT6vDDvEg9Y7QJagy8xK31BV9Z+/X/cJdPZtHGQcCoRD8
+Jn1Ic4eGylsehRBp8jtcic/BnNvE9p8hVoNzzgjoKuR7FkakGgrJjYk85AMwFqYn
+wCt6L5IkL3hIv4Sf5nj2LhAUZPYZuARTZVc1C2IxxVA2GauuWqCYlGkG6ufN8DiR
+FKwMdIBxv0QLwgfhkUDUE+xE7R+JuDnQPgYsGHQl0kdsJa7NtW1QWbJKhYDGqygC
+4ZcNwZwXdrWSS0KSOtUV2T0PcYYmGZ1nk1fYHDtCm5iLMP7tUPKmHq4F3Yv0lvk=
+=M6yI
 -----END PGP SIGNATURE-----
